fix(cars-list): removed visible overflowing of car info in the list

--- a/apps/shop/src/app/catalog/cars/cars-list/cars-list.component.scss
+++ b/apps/shop/src/app/catalog/cars/cars-list/cars-list.component.scss
@@ -10,6 +10,7 @@
 
     &-container {
       display: flex;
+      overflow: hidden;
       flex-direction: column;
       align-items: center;
       text-align: center;
